--- a/front-host/package.json
+++ b/front-host/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.7.7",
         "framer-motion": "^11.11.9",
         "react": "^18.3.1",
+        "react-confetti": "^6.1.0",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-scripts": "5.0.1",
