--- a/events/src/main/resources/application-hml.properties
+++ b/events/src/main/resources/application-hml.properties
@@ -11,4 +11,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=ecajscvp
 spring.rabbitmq.password=hvikkwsSvIMjzytv9btckXWwkfOaiSaR
 
+spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@musicando-mongo:27017/?authSource=admin
+spring.data.mongodb.database=musicando
+
 msc.manager.url=http://musicando-manager:8080
